fix tools display and format
